<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- this needs to be changed back to Liberty Settings -->

	<string name="app_name">Performance Settings</string>

	<!-- Dialog Titles -->
	<string name="dt_free_memory">Minfree Taskkiller</string>

	<!-- Preference Categories -->
	<string name="prefcat_cpu">Set CPU</string>
	<string name="prefcat_free_memory">Free Memory</string>
	<string name="pc_tweaks">Tweaks</string>
	<string name="pc_init_d">Enable/Disable Tweaks</string>
	<string name="pc_init_d_tweaks">Customize Tweaks</string>

	<!-- Preference Titles -->
	<!-- Main -->
	<string name="pt_performance">Performance</string>
	<string name="pt_customization">Customization</string>
	<string name="pt_tools">Tools</string>
	<string name="pt_mod_version">Mod version</string>
	<!-- Customization -->
	<string name="pt_liberty_customizer">Liberty Customizer</string>
	<string name="pt_lockscreen">Lockscreen Settings</string>
	<string name="pt_ui_status_bar">Status Bar</string>
	<string name="pt_pulldown_text">Pulldown Text</string>
	<string name="pt_theme_manager">Theme Manager</string>
	<!-- Tools -->
	<string name="pt_spare_parts">Spare Parts</string>
	<string name="pt_dev_tools">Dev Tools</string>
	<string name="pt_dsp_manager">DSP Manager</string>
	<string name="pt_testing_menu">Testing Menu</string>
	<!-- Start up tweaks -->
	<string name="pt_init_d">Start-up Tweaks</string>
	<string name="pt_enable_init_d">Enable start-up tweaks</string>
	<string name="pt_zipalign">Zipalign apks</string>
	<string name="pt_enable_sd_boost">Enable SD boost</string>
	<string name="pt_sd_boost">Read ahead value</string>
	<string name="pt_fix_permissions">Fix permissions</string>
	<string name="pt_clear_cache">Clear cache</string>
	<string name="pt_enable_sysctl">Enable sysctl</string>
	<string name="pt_enable_cron">Enable scheduled tasks</string>
	<!-- Performance -->
	<string name="pt_set_cpu_activity">Set cpu</string>
	<string name="pt_free_memory">Free memory</string>
	<string name="pt_free_memory_boot">Set at boot</string>
	<!-- Cpu -->
	<string name="pt_set_max">Max cpu</string>
	<string name="pt_set_min">Min cpu</string>
	<string name="pt_set_gov">Scaling governor</string>
	<string name="pt_cpu_boot">Set at boot</string>

	<!-- Preference Summaries -->
	<!-- Main -->
	<string name="ps_performance">Set cpu, free memory &amp; customize start-up
		settings.</string>
	<string name="ps_customization">Customize the lockscreen &amp; status bar. Install
		blur/aosp apps with Liberty Customizer</string>
	<string name="ps_tools">Various system tools</string>
	<!-- Customization -->
	<string name="ps_liberty_customizer">Customize the ROM to your liking</string>
	<string name="ps_lockscreen">Change lockscreen styles and manage widgets
	</string>
	<string name="ps_ui_status_bar">Customize the status bar</string>
	<string name="ps_pulldown_text">Change the text in the pulldown bar.</string>
	<string name="ps_theme_manager">Install custom themes for Liberty ROM</string>
	<!-- Tools -->
	<string name="ps_spare_parts">Various tweaks and customization</string>
	<string name="ps_dev_tools">Tools for developers and advanced users</string>
	<string name="ps_dsp_manager">Stand alone equalizer</string>
	<string name="ps_testing_menu">Phone info, battery info, usage statistics</string>
	<!-- Start up tweaks -->
	<string name="ps_init_d">Configure tweaks that are run at boot
		(init.d)
	</string>
	<string name="ps_enable_init_d">Enable/disabe start-up tweaks</string>
	<string name="ps_zipalign">zipalign any unaligned apps on each boot</string>
	<string name="ps_enable_sd_boost">Enable/disable SD card speed boost</string>
	<string name="ps_sd_boost">Set value of read ahead in kb</string>
	<string name="ps_fix_permissions">Fix permissions for apps on each boot</string>
	<string name="ps_clear_cache">Clear data cache on each boot</string>
	<string name="ps_enable_sysctl">Enable sysctl tweaks on boot</string>
	<string name="ps_enable_cron">Enable scheduled cron jobs</string>
	<!-- CPU -->
	<string name="ps_set_max">Set max cpu scaling frequency\nCurrent: %s</string>
	<string name="ps_set_min">Set min cpu scaling frequency\nCurrent: %s</string>
	<string name="ps_set_gov">Set current scaling governor\nCurrent: %s</string>
	<string name="ps_cpu_boot">Apply cpu at boot</string>
	<!-- Performance -->
	<string name="ps_set_cpu_activity">Set min/max frequencies and scaling governor
	</string>
	<string name="ps_free_memory">Amount of ram the minfree taskkiller will keep |
		Current: %s</string>
	<string name="ps_free_memory_boot">Apply the amount above at boot</string>

	<!-- Toast Messages -->
	<string name="toast_min_max_error01">Max cpu cannot be lower than min cpu</string>
	<string name="toast_min_max_error02">Min cpu cannot be higher than max cpu</string>

	<!-- list_voltage -->
	<string name="freq">Frequency</string>
	<string name="current">mV current</string>
	<string name="saved">mV saved</string>

	<!-- voltage -->
	<string name="error_values">Error getting values</string>
	<string name="set_boot">Set On Boot</string>
	<string name="apply_values">Apply Values</string>


</resources>
